--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta 
+      property="og:title"
+      content="Elżbieta Kołcz portfolio website"
+    />
+
+     <meta
+      name="description"
+      content="Elżbieta Kołcz - UI designer specializing in creating accessible and modern websites. Explore my projects!"
+    />
+
+    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:url" content="https://elzbietakolcz.github.io/portfolio-website/" />
+    <meta property="og:type" content="website" />
+    <meta name="author" content="Elzbieta Kołcz" />
+    <meta name="robots" content="index, follow" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Elzbieta Kołcz portfolio website" />
+    <meta
+      name="twitter:description"
+      content="Elżbieta Kołcz - UI designer specializing in creating accessible and modern websites. Explore my projects!"
+    />
+    <meta name="twitter:image" content="/favicon.svg" />
+
     <link
       rel="icon"
       href="src/assets/favicon.svg"
